--- a/about.html
+++ b/about.html
@@ -55,9 +55,7 @@
   <main>
     <h1><a class="yex">Yex</a></h1>
     <p>
-      I am a developer who's fluent in Java, Kotlin, <abbr title="HyperText Markup Language">HTML</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr>, <abbr title="JavaScript">JS</abbr>, ReactJS, C#, Python, and Lua.
-      I live in Washington <abbr title="District of Columbia">D.C.</abbr>, <abbr title="United States of America">USA</abbr>.
-      You can find my contacts via my Discord profile (Yex#8555).
+      I am somebody who forked the site and modified it to have more games. I am not "yex".
     </p>
   </main>
 
