--- a/games.html
+++ b/games.html
@@ -45,7 +45,7 @@
       <a href="bookmarklets.html" data-tippy-content="Bookmarklets"><i class="fas fa-bookmark"></i></a>
       <a href="chat.html" data-tippy-content="Chat"><i class="fas fa-comments"></i></a>
       <a href="privacy-policy.html" data-tippy-content="Privacy Policy"><i class="fas fa-user-lock"></i></a>
-      <a href="https://discord.gg/V49EfgSWgr" data-tippy-content="Discord"><i class="fab fa-discord"></i></a>
+      <a href="https://discord.gg/" data-tippy-content="Discord"><i class="fab fa-discord"></i></a>
       <a href="ide.html" data-tippy-content="IDE"><i class="fas fa-code"></i></a>
     </nav>
   </header>
@@ -59,7 +59,7 @@
       <a href="./2048/index.html" class="game">2048</a>
       <a href="./slope/index.html" class="game">Slope</a>
       <a href="./bob/bob.html" class="game">Tunnel Rush</a>
-      <a href="./agario-minigame/dots.html" class="game">Agar.io Dots Minigame</a>
+      <a href="./minigame/dots.html" class="game">Agar.io Dots Minigame</a>
       <a href="./gameboy/gameboydir.html" class="game">GameBoy Games</a>
       <a href="./btd1.html" class="game">Bloons TD</a>
       <a href="./btd2.html" class="game">Bloons TD 2</a>
@@ -67,6 +67,7 @@
       <a href="./btd4.html" class="game">Bloons TD 4</a>
       <a href="./boi.html" class="game">Binding of Isaac (DEMO)</a>
       <a href="./basketball-stars/index.html" class="game">Basketball Stars</a>
+	  <a href="./basketball-legends/index.html" class="game">Basketball Legends</a>
       <a href="./snake/index.html" class="game">Snake</a>
       <a href="./sm64/index.html" class="game">Super Mario 64</a>
       <a href="./paperio2/index.html" class="game">Paper.io 2</a>
