--- a/basketball-legends/index.html
+++ b/basketball-legends/index.html
@@ -14,6 +14,8 @@
     <div id="content"></div>
     <div id="orientation"></div>
     <div id="loader">Loading...</div>
+	<script src="/poki-sdk.js"></script>    
+	<script src="/poki-sdk-core-v2.263.0.js" type="text/javascript" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/box2dweb/nape.min.js" >
         var nape ="nape.min.js" ;
     </script>
