--- a/games.html
+++ b/games.html
@@ -54,6 +54,7 @@
     <h1>Games</h1>
     <hr>
     <div class="list">
+      <a href="./roblox/index.html" class="game">Roblox</a>
       <a href="./cookie/index.html" class="game">Cookie Clicker</a>
       <a href="./retro-bowl/retro.html" class="game">Retro Bowl</a>
       <a href="./2048/index.html" class="game">2048</a>
